# nodum

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.example.yml  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docker/: entrypoint.sh
docs/: CNAME  commands.md  concepts.md  index.md  install.md  legal.md  llms.txt  quick-start.md
docs/assets/stylesheets/: extra.css
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  fields.ts  main.tsx  schema.ts  styles.css  types.ts  util.ts
frontend/src/components/: CreateEdge.tsx  CreateNode.tsx  Field.tsx  FieldSchemaEditor.tsx  GraphView.tsx  Login.tsx  NodeDetail.tsx  NodePicker.tsx  SchemaAdmin.tsx  Search.tsx  Workspace.tsx
nodum/: __init__.py  api.py  auth.py  cli.py  db.py  metamodel.py  models.py  schema.sql  service.py  settings.py  web.py
nodum/static/: app.js  login.js  styles.css
nodum/templates/: index.html  login.html
tests/: conftest.py  test_acceptance.py  test_api.py  test_auth.py  test_auth_api.py  test_metamodel.py  test_migration.py  test_parity.py  test_service.py  test_web.py
