[project]
name = "nodum"
dynamic = ["version"]
description = "Atomic-notes knowledge system: a mutable PostgreSQL graph of typed, UUID-keyed nodes and edges with full-text search and recursive subgraph expansion, behind one data-service layer fronted by a CLI and an HTTP API. This wheel is the CLI/library; the full web UI ships in the Docker image."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Alice Voland" }]
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi>=23.1",
    "environs>=14.6.0",
    "fastapi>=0.115",
    "itsdangerous>=2.2",
    "psycopg[binary]>=3.2",
    "pydantic>=2.9",
    "typer>=0.16",
    "uvicorn>=0.30",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Text Processing :: Indexing",
]

[project.urls]
Repository = "https://github.com/vcoeur/nodum"
Issues = "https://github.com/vcoeur/nodum/issues"

[project.scripts]
nodum = "nodum.cli:app"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# Version is derived from the git tag (vX.Y.Z) at build time — never committed.
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["nodum"]

# Non-Python package data the runtime reads via importlib.resources: the DDL.
# The web UI (the React bundle) is NOT in the wheel — it is built into the Docker
# image and served from NODUM_WEB_DIST (see nodum.web).
[tool.hatch.build]
artifacts = [
    "nodum/schema.sql",
]

[dependency-groups]
dev = [
    "httpx>=0.28",
    "pytest>=9.0.2",
    "pytest-cov>=6.0",
    "ruff>=0.15.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["SIM105", "SIM117"]

[tool.ruff.lint.per-file-ignores]
# Typer's Option(...) / Argument(...) default-arg pattern is idiomatic; B008 flags it.
"nodum/cli.py" = ["B008"]
